hphp/test/zend/good/Zend/tests/add_004.php.expectf

Fatal error: Invalid operand type was used: cannot perform this operation with arrays in %s/add_004.php on line 5
